# taple-client

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.tools  README.md  SUPPORT.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
client/src/config/: client.rs  error.rs  mod.rs  taple.rs
client/src/database/: error.rs  leveldb.rs  mod.rs  wrapper_level.rs
client/src/http/: doc.rs  mod.rs
client/src/http/api/: bodys.rs  error.rs  handlers.rs  mod.rs  querys.rs  responses.rs
client/src/rest/: bodys.rs  error.rs  handlers.rs  mod.rs  openapi.rs  querys.rs  responses.rs  routes.rs
client/src/settings/: client.rs  error.rs  mod.rs  taple.rs
client/src/taple/: mod.rs
client/tests/: basic.rs  integration_test_api.rs
client/tests/common/: mod.rs  node_builder_api.rs  utils.rs
contracts/: Cargo.toml
contracts/src/: lib.rs
contracts/src/sdk/: error.rs  externf.rs  mod.rs  value_wrapper.rs
easy_settings/: Cargo.toml
easy_settings/src/: any.rs  error.rs  lib.rs  param.rs  utils.rs
examples/quickstart/: README.md
examples/quickstart/scripts/: __internal_launch_node.sh  constants.sh  create_event.sh  create_governance.sh  create_subject.sh  get_subjects.sh  launch_node.sh  stop_nodes.sh
rest/: Cargo.toml
rest/src/: bodys.rs  error.rs  handlers.rs  lib.rs  mod.rs  openapi.rs  routes.rs
rest/tests/: integration_test_api.rs
rest/tests/common/: mod.rs  node_builder_api.rs  utils.rs
settings/: Cargo.toml
settings/src/: any.rs  error.rs  lib.rs  param.rs
taple-tools/: .dockerignore  Dockerfile  README.md  start.sh
taple-tools/scripts/: taple-patch  taple-sign
taple-tools/taple-keygen/: Cargo.toml
taple-tools/taple-keygen/src/: main.rs
taple-tools/taple-patch/src/: main.rs
taple-tools/taple-sign/src/: model.rs
tools/: README.md  run.sh  start.sh
tools/keygen/: Cargo.toml
tools/keygen/src/: main.rs
tools/patch/: Cargo.toml
tools/patch/src/: error.rs  main.rs
tools/sc-build/: Cargo.toml
tools/sc-build/src/: main.rs  manifest.rs
tools/scripts/: taple-keygen  taple-patch  taple-sign
tools/sign/: Cargo.toml
tools/sign/src/: main.rs  model.rs
