[workspace]

members = [
    "rest",
    "settings",
    "client",
]

[workspace.dependencies]
taple_core = { git = "https://github.com/opencanarias/taple-core", package = "core", tag = "v0.1.2"}
commons = { git = "https://github.com/opencanarias/taple-core", tag = "v0.1.2" }

## Client
env_logger = "0.9"
log = "0.4"
async-trait = "0.1.56"
utoipa = "2"
utoipa-swagger-ui = "2"
tokio = { version = "1.20", features = ["default", "time", "rt", "rt-multi-thread", "sync", "macros", "signal"] }
warp = {version = "0.3.3"}
serde = "1.0.152"
serde_json = "1.0"
thiserror = "1.0"

## REST
futures = "0.3.24"
chrono={ version = "0.4", features = ["clock"]}
ureq = { version = "2.6.2", features = ["json", "charset"] } 

# API
config = { version = "0.13.2" }

## SETTINGS
clap = {version = "4.1.3", features = ["string"] }
toml = "0.6.0"
lazy_static = "1.4.0"
regex = "1.7.1"

[profile.release]
lto = true
codegen-units = 1
debug = false
debug-assertions = false
panic = "abort"

[profile.test]
debug = true

[profile.dev]
debug = true

[profile.doc]
debug-assertions = false
