[workspace]
members = [
    "settings",
    "client",
]

[workspace.package]
version = "0.2.0-dev"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
edition = "2021"
description = "TAPLE Client official implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es" 
readme = "./README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-client"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]


[workspace.dependencies]
# taple-core = { git = "https://github.com/opencanarias/taple-core", features = ["evaluation", "validation", "aproval"] }
taple-core = { path = "../taple-core/core", features = ["evaluation", "validation", "aproval"]}

## Client
env_logger = "0.10"
log = "0.4"
async-trait = "0.1.56"
utoipa = "2"
utoipa-swagger-ui = "2"
tokio = { version = "1.20", features = ["default", "time", "rt", "rt-multi-thread", "sync", "macros", "signal"] }
warp = { version = "0.3.3" }
serde = "1.0.152"
serde_json = "1.0"
thiserror = "1.0"
home = "0.5.5"

## REST
futures = "0.3.24"
ureq = { version = "2.6.2", features = ["json", "charset"] } 
hex = "0.4.3"

# API
config = { version = "0.13.2" }

## SETTINGS
clap = {version = "4.1.3", features = ["string"] }
toml = "0.6.0"
lazy_static = "1.4.0"
regex = "1.7.1"
linked_hash_set = "0.1.4"

## TEST
serial_test = "1.0.0"

## LEVEL DB
url = "2.3.1"
leveldb = "0.8"
db-key = "0.0.5"
bincode = "1.0"
tempfile = "^3.4"
tempdir = "~0.3"

[profile.release]
lto = true
codegen-units = 1
debug = false
debug-assertions = false
panic = "abort"

[profile.test]
debug = true

[profile.dev]
debug = true

[profile.doc]
debug-assertions = false
