[workspace]
members = ["settings", "client", "tools/keygen", "tools/patch", "tools/sign"]

[workspace.package]
version = "0.3.0-dev"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
edition = "2021"
description = "TAPLE Client official implementation"
readme = "./README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-client"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]
rust-version = "1.67"

[workspace.dependencies]
#taple-core = { git = "https://github.com/opencanarias/taple-core", features =  ["all"] }
taple-core = { path = "../taple-core/core", features = ["all"] }
env_logger = "0.10"
log = "0.4"
utoipa = "3"
utoipa-swagger-ui = "3"
tokio = "1.20"
warp = "0.3.3"
serde = { version = "1.0.100", default-features = false }
serde_json = "1.0.97"
thiserror = "1"
home = "0.5.5"
futures = "0.3.24"
ureq = { version = "2.6.2", features = ["json", "charset"] }
hex = "0.4.3"
borsh = "0.10.3"
config = "0.13.2"
clap = { version = "4.1.3", features = ["string", "derive"] }
toml = "0.6"
lazy_static = "1.4"
regex = "1.7.1"
linked_hash_set = "0.1.4"
serial_test = "1"
leveldb = "0.8"
db-key = "0.0.5"
tempfile = "3.4"
libp2p = { version = "0.45.1", default-features = false }
json-patch = "1"
serde_yaml = "0.9"

[profile.release]
lto = true
codegen-units = 1
debug = false
debug-assertions = false
panic = "abort"

[profile.test]
debug = true

[profile.dev]
debug = true

[profile.doc]
debug-assertions = false
