[package]
name = "taple-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "taple-client"
path = "src/main.rs"

[dependencies]
# API
env_logger = { workspace = true }
log = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

tokio = { workspace = true }
warp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

taple_core = { workspace = true }

settings = { path = "../settings" }

[dev-dependencies]
env_logger = { workspace = true }
ureq = { workspace = true }
futures = { workspace = true }
serial_test = { workspace = true }