[package]
name = "taple-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "taple-client"
path = "src/main.rs"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
borsh = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true }
warp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
hex = { workspace = true }
home = { workspace = true }
taple-core = { workspace = true, features = ["all"] }
taple-db-leveldb = { workspace = true }
taple-network-libp2p = { workspace = true }
easy_settings = { path = "../easy_settings" }
leveldb = { workspace = true }
db-key = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
serial_test = { workspace = true }
