[package]
name = "easy_settings"
version = "0.2.0"
edition = "2021"
description = "Dynamic configuration builder based on CLAP"

[dependencies]
clap = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
linked_hash_set = { workspace = true }