[package]
name = "rest"
version = "0.1.3"
edition = "2021"
authors = ["Open Canarias S.L.<taple@opencanarias.com>"]
description = "TAPLE Client official implementation"
# Remove when crates.io is published
documentation = "https://www.taple.es" 
readme = "../README.md"
homepage = "https://www.taple.es"
repository = "https://github.com/opencanarias/taple-client"
license = "AGPL-3.0-only"
keywords = ["blockchain", "distributed-ledger", "taple", "sustainability"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# API
tokio = { workspace = true }
warp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

taple_core = { workspace = true }
commons = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
ureq = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }