[package]
name = "rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# API
tokio = { workspace = true }
warp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

taple_core = { workspace = true }
commons = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
ureq = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }