[package]
name = "taple-patch"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taple-core = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
serde_json = { workspace = true }
json-patch = { workspace = true }
thiserror = { workspace = true }
