[package]
name = "taple-sign"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
taple-core = { workspace = true }
hex = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
serde_json = { workspace = true }
